# MaxKB

./: .dockerignore  .gitignore  .typos.toml  CONTRIBUTING.md  Dockerfile  Dockerfile-allinone  README.md  README_CN.md  README_EN.MD  README_EN.md  README_JP.md  README_ZH.md  SECURITY.md  USE-CASES.md  config_example.yml  docker-compose.yml  install_model.py  main.py  package-lock.json  package.json  pyproject.toml
.github/: buildkitd.toml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build-and-push-allinone.yml  build-and-push-base.yml  build-and-push-python-pg.yml  build-and-push-vector-model.yml  build-and-push.yml  create-pr-from-push.yml  issue-translator.yml  llm-code-review.yml  sync2gitee.yml  typos_check.yml
apps/: manage.py
apps/application/: apps.py  urls.py
apps/application/api/: application_access_token.py  application_api.py  application_api_key.py  application_chat.py  application_chat_record.py  application_stats.py  application_version.py
apps/application/chat_pipeline/: I_base_chat_pipeline.py  __init__.py  pipeline_manage.py
apps/application/flow/: __init__.py  common.py  default_workflow.json  default_workflow_en.json  i_step_node.py  tools.py  workflow_manage.py
apps/application/migrations/: 0001_initial.py  0002_alter_application_user_alter_chat_id.py  0002_alter_chatrecord_dataset.py  0002_alter_chatrecord_dataset_alter_chatrecord_paragraph.py  0002_applicationaccesstoken_authentication_and_more.py  0002_applicationapikey.py  0002_chat_chatrecord_workflowversion_and_more.py  0002_chat_client_id.py  0002_initial.py  0003_alter_chatrecord_dataset_alter_chatrecord_paragraph.py  0003_application_icon.py  0003_applicationaccesstoken_application_is_publish_and_more.py  0003_applicationaccesstoken_show_exec_chat_client_type_and_more.py  0003_chat_asker_chat_meta_and_more.py  0003_remove_chatrecord_dataset_and_more.py  0004_alter_chatrecord_source_id_and_more.py  0004_application_publish_time_applicationversion_and_more.py  0004_applicationaccesstoken_show_source.py  0004_remove_application_example_and_more.py  0004_remove_applicationchatclientstats_application_applica_f89647_idx_and_more.py  0005_alter_chat_abstract_alter_chatrecord_answer_text.py  0005_alter_chatrecord_details.py  0005_alter_chatrecord_source_type.py  0005_chat_chat_record_count_chat_mark_sum_chat_star_num_and_more.py  0005_rename_applicationchatclientstats_applicationchatuserstats_and_more.py  0006_alter_applicationfolder_user.py  0006_alter_chat_id.py  0006_applicationaccesstoken_applicationapikey.py  0006_applicationapikey_allow_cross_domain_and_more.py  0006_remove_chatrecord_paragraph_id_list.py  0007_alter_application_desc.py  0007_alter_application_prologue.py  0007_application_api_key_is_active_alter_application_desc_and_more.py  0008_applicationaccesstoken_access_num_and_more.py  0008_chat_is_deleted.py  0008_remove_application_api_key_is_active_and_more.py  0009_alter_chatrecord_dataset_alter_chatrecord_paragraph.py  0009_application_type_application_work_flow.py  0009_application_type_application_work_flow_and_more.py  0009_applicationpublicaccessclient.py  (+24 more)
apps/application/models/: __init__.py  api_key_model.py  application.py  application_access_token.py  application_api_key.py  application_chat.py
apps/application/serializers/: application.py  application_access_token.py  application_api_key.py  application_chat.py  application_chat_record.py  application_folder.py  application_serializers.py  application_statistics_serializers.py  application_stats.py  application_version.py  application_version_serializers.py  chat_message_serializers.py  chat_serializers.py  common.py
apps/application/sql/: chat_record_count.sql  chat_record_count_trend.sql  count_chat_record.sql  customer_count.sql  customer_count_trend.sql  export_application_chat.sql  export_application_chat_ee.sql  list_application.sql  list_application_chat.sql  list_application_chat_ee.sql  list_application_dataset.sql  list_application_user.sql  list_application_user_ee.sql  list_dataset_paragraph_by_paragraph_id.sql  list_knowledge_paragraph_by_paragraph_id.sql
apps/application/swagger_api/: application_api.py  application_statistics_api.py  application_version_api.py  chat_api.py
apps/application/template/: embed.js
apps/application/views/: __init__.py  application.py  application_access_token.py  application_api_key.py  application_chat.py  application_chat_record.py  (+6 more)
apps/chat/: apps.py  urls.py
apps/common/: __init__.py
apps/dataset/: apps.py  urls.py
apps/embedding/: apps.py
apps/folders/: urls.py
apps/function_lib/: apps.py  urls.py
apps/knowledge/: apps.py  urls.py
apps/maxkb/: asgi.py  conf.py  const.py  urls.py  wsgi.py
apps/models_provider/: apps.py  base_model_provider.py  tools.py  urls.py
apps/modules/: urls.py
apps/ops/: __init__.py
apps/oss/: apps.py  retrieval_urls.py  urls.py
apps/setting/: apps.py  urls.py
apps/smartdoc/: asgi.py  conf.py  const.py  urls.py  wsgi.py
apps/system_manage/: apps.py  urls.py
apps/tools/: apps.py  urls.py
apps/users/: apps.py  urls.py
apps/workflow/: apps.py
conf/: config_example.yml
installer/: Dockerfile  Dockerfile-base  Dockerfile-dev  Dockerfile-python-pg  Dockerfile-vector-model  compile.py  config.yaml  init.sql  install-python.sh  install_model.py  install_model_bert_base_cased.py  run-maxkb.sh  start-all.sh  start-maxkb.sh  start-postgres.sh  start-redis.sh
tmp/: celery_default.pid
ui/: .eslintrc.cjs  README.md  admin.html  chat.html  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
ui/env/: .env  .env.chat
ui/public/: embeb.js  index.html
ui/src/: App.vue  chat.ts  main.ts
(+2331 files in other folders)
