[tool.poetry]
name = "maxkb"
version = "2.0.0"
description = "企业级 AI 助手"
authors = ["shaohuzhang1 <shaohu.zhang@fit2cloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web框架
django = "5.2.4"
drf-spectacular = { extras = ["sidecar"], version = "0.28.0" }
django-redis = "6.0.0"
django-db-connection-pool = "1.2.6"
django-mptt = "0.17.0"
psycopg = { extras = ["binary"], version = "3.2.9" }

# 工具库
python-dotenv = "1.1.1"
uuid-utils = "0.11.0"
captcha = "0.7.1"
pytz = "2025.2"
psutil = "7.0.0"
cffi = "1.17.1"
beautifulsoup4 = "4.13.4"
jieba = "0.42.1"

# LLM及AI相关
langchain-openai = "0.3.27"
langchain-anthropic = "0.3.17"
langchain-community = "0.3.27"
langchain-deepseek = "0.1.3"
langchain-google-genai = "2.1.7"
langchain-mcp-adapters = "0.1.9"
langchain-huggingface = "0.3.0"
langchain-ollama = "0.3.4"
langgraph = "0.5.3"
torch = "2.7.1"
sentence-transformers = "5.0.0"

# 云服务SDK
qianfan = "0.4.12.3"
zhipuai = "2.1.5.20250708"
volcengine-python-sdk = {version = "4.0.5", extras = ["ark"]}
boto3 = "1.39.4"
tencentcloud-sdk-python = "3.0.1420"
xinference-client = "1.7.1.post1"
anthropic = "0.57.1"
dashscope = "1.23.8"

# 异步任务
celery = { extras = ["sqlalchemy"], version = "5.5.3" }
django-celery-beat = "2.8.1"
celery-once = "3.0.1"
django-apscheduler = "0.7.0"

# 文档处理
html2text = "2025.4.15"
openpyxl = "3.1.5"
python-docx = "1.2.0"
xlrd = "2.0.2"
xlwt = "1.3.0"
pymupdf = "1.26.3"
pypdf = "5.7.0"

# 音频处理
pydub = "0.25.1"
pysilk = "0.0.1"

# 部署工具
gunicorn = "23.0.0"
python-daemon = "3.1.2"
websockets = "15.0.1"

# 开发工具
pylint = "3.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"